compiler/testData/diagnostics/tests/redeclarations/EnumEntriesAndClassObjectMembers.kt
enum class E {
    <!REDECLARATION!>FIRST<!>

    <!REDECLARATION!>SECOND<!>

    class object {
        class <!REDECLARATION!>FIRST<!>

        val <!REDECLARATION!>SECOND<!> = this
    }
}
